Fix alignment issues

--- a/style.css
+++ b/style.css
@@ -140,10 +140,12 @@ img {
 
 .call-to-action {
     display:flex;
+    justify-content:center;
 }
 
 .call-to-action-sign {
     display:flex;
+    justify-content:space-between;
     align-items:center;
     background:#3882F6;
     margin:100px 100px;
